<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditActivity"
    android:background="@color/mint_background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/dark_blue_text"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_white">

        <EditText
            android:id="@+id/app_name_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_300sdp"
            android:hint="@string/input_your_app_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="50"
            android:textSize="@dimen/_20sdp" />

        <EditText
            android:id="@+id/hash_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_250sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_100sdp"
            android:hint="@string/input_your_password"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:maxLength="128"
            android:textSize="@dimen/_20sdp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/save"
            android:textColor="@color/dark_blue_text"
            android:textSize="@dimen/_40sdp"
            android:id="@+id/edit_save_button"
            />

    </RelativeLayout>

</RelativeLayout>