<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddPasswordActivity"
    android:background="@color/mint_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_150sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:background="@drawable/rounded_corner_white"
        >

        <EditText
            android:id="@+id/input_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/input_your_app_name"
            android:maxLength="50"
            android:textColor="@color/dark_blue_text"
            android:textSize="@dimen/_20sdp"
            android:importantForAutofill="no"
            android:inputType="text" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_220sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:background="@drawable/rounded_corner_white">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/input_your_password"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:maxLength="128"
            android:textColor="@color/dark_blue_text"
            android:textSize="@dimen/_20sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_280sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:background="@drawable/rounded_corner_white"
        >

        <Button
            android:id="@+id/add_password"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/add_password"
            android:textColor="@color/dark_blue_text"
            android:textSize="@dimen/_20sdp" />

    </RelativeLayout>

</RelativeLayout>